Body overflow fix

--- a/src/scss/_core.scss
+++ b/src/scss/_core.scss
@@ -8,7 +8,7 @@ html.hc-nav-yscroll {
 }
 
 body.hc-nav-open {
-  overflow: hidden;
+  overflow: visible;
   position: fixed;
   width: 100%;
   min-height: 100%;
